# pick-e

./: .gitignore  Cargo.toml  Cargo_native.toml  Cargo_wasm.toml  README.md  TODO.md  Trunk.toml  build_app.sh  clean_build_app.sh  index.html  launch_app.sh  launch_native.sh  launch_web.sh  pick_e.wasm
.cargo/: config.toml  config_wasm.toml
assets/: collision-cache.txt
assets_src/_source/: map.xcf  map_mask.xcf
docs/: index.html  pick-e-36264c7f2265501b.js  pick-e-65ba944b0969a32a.js
public/: index.html  pick-e-36264c7f2265501b.js  pick-e-4eb83d470d2ab3a9.js
public/assets/: collision-cache.txt
src/: app.rs  constants.rs  lib.rs  main.rs
src/bundles/: camera.rs  hero.rs  mod.rs
src/components/: cmd_vel.rs  collectible.rs  lidar.rs  mod.rs  occupancy_grid.rs  visited_grid.rs
src/plugins/: mod.rs
src/plugins/auto_nav/: auto_nav_constants.rs  auto_nav_plugin.rs  constants.rs  done_check.rs  follow_path.rs  follow_path_system.rs  mod.rs  mode.rs  path_planning.rs  plan_frontier_path_system.rs  plugin.rs  stop_when_done_system.rs
src/systems/: collectibles.rs  level.rs  mod.rs  movement.rs  startup.rs
src/systems/robot/: auto_nav.rs  cmd_vel_drive.rs  input_keyboard.rs  lidar_sensor.rs  mod.rs  occupancy_grid.rs
src/ui/: mod.rs  stats_overlay.rs
