[package]
name = "pick-e"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy = { version = "0.13", default-features = false, features = ["webgl2"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1.8.1", features = ["js"] }

